--- a/src/components/Release/release.css
+++ b/src/components/Release/release.css
@@ -3,7 +3,8 @@
     text-align: center;
     border: navajowhite;
     outline: none;
-    color:#3F3F48;
+    color:#D0D2D9;
+    opacity: 0.3
 }
 
 .input_text{
@@ -11,4 +12,44 @@
     flex-direction: column;
     align-items: flex-start;
     
+}
+
+.release_input{
+    border: none;
+    width: 300px;
+    outline: none;
+}
+
+.release_p{
+    color: #0064CF;
+    font-size: 14px;
+    margin-bottom: 4px;
+}
+
+.release_box{
+    padding: 13px 17px;
+    margin-top: 50px;
+
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    border: 1px solid #DBDBDC;
+    border-radius: 21px;
+    cursor: pointer;
+}
+
+.borderR{
+    padding: 13px 17px;
+    margin-top: 50px;
+
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    border: 2px solid #0064CF;
+    border-radius: 21px;
+    cursor: pointer;
 }
