--- a/src/components/WalletConnect/WalletConnect.css
+++ b/src/components/WalletConnect/WalletConnect.css
@@ -1,5 +1,8 @@
 .WalletConnect{
-    position: relative;
+    position: fixed;
+    position: fixed;
+    top: 18vh;
+    left: 32%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,7 +12,7 @@
     padding: 20px 0px 146px;
     border-radius: 25px;
     box-shadow: 0px 0px 7px 0px rgb(0 0 0 / 70%);
-    
+    z-index: 100;
 }
 
 .connect_P{
