--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -4,7 +4,7 @@
     padding: 20px 0px 40px;
     border-radius: 25px;
     box-shadow: 0px 0px 7px 0px rgb(0, 0, 0, .7);
-
+    margin-top: 50px;
 }
 
 .mint_container{
@@ -30,4 +30,16 @@
 
 .slider__p{
     color:  #87888C;
+}
+
+@media screen and (max-width: 700px) {
+    .form_container{
+        max-width: 340px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .form_container{
+        width: 322px;
+    }
 }
