--- a/src/components/UpNav/UpNav.css
+++ b/src/components/UpNav/UpNav.css
@@ -125,3 +125,38 @@
    
 
 } 
+
+.link{
+    text-decoration: none;
+    color: black;
+}
+
+
+@media screen and (max-width: 700px) {
+    .right_text{
+        display: none;
+    }
+
+    .right_upnav{
+        padding-right: 12px;
+    padding: unset;
+    }
+
+    .upav_container{
+        padding: 5px 20px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .left_nav{
+        padding: unset;
+    }
+
+    .right_upnav{
+        padding-left: 10px;
+    }
+
+    .upav_container{
+        padding: 5px;
+    }
+}
